# mdk-blinky

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs  sensor.rs
