[package]
name = "mdk-blinky"
version = "0.1.0"
authors = ["Sven Stucki <git@svenstucki.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nrf52840-hal = { version = "0.11.0", features = ["rt"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
