[package]
name = "mdk-blinky"
version = "0.1.0"
authors = ["Sven Stucki <git@svenstucki.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
nrf52840-hal = "0.18.0"
rtt-target = { version = "0.5.0" }
embedded-hal = "1.0.0"
