[package]
name = "mdk-blinky"
version = "0.1.0"
authors = ["Sven Stucki <git@svenstucki.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
nrf52840-hal = "0.18.0"
embedded-hal = "1.0.0"
defmt-rtt = "0.4.1"
defmt = "0.3.8"
nrf-softdevice = { version = "=0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.2" }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1"] }
embassy-executor = { version = "0.6.0", features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
embassy-sync = "0.6.0"
